k8s/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: mails2radhika-vk-dev
spec:
  to:
    kind: Service
    name: frontend
  port:
    targetPort: http
